[package]
name = "luna-core"
version = "0.1.0"
edition = "2021"
description = "LUNA — Privacy-first cycle tracking core library"
license = "MIT OR Apache-2.0"

[lib]
name = "luna_core"
crate-type = ["staticlib", "cdylib", "lib"]

[dependencies]
# Cryptographie — aucun appel réseau, tout on-device
ring           = "0.17"
aes-gcm        = "0.10"
argon2         = "0.5"
zeroize        = { version = "1.8", features = ["derive"] }
secrecy        = "0.8"
rand           = "0.8"

# Base de données chiffrée (SQLCipher compilé statiquement)
rusqlite = { version = "0.31", features = ["bundled-sqlcipher"] }

# Sérialisation
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
uuid       = { version = "1", features = ["v4", "serde"] }
chrono     = { version = "0.4", features = ["serde"] }

# Bindings cross-platform iOS + Android
uniffi = "0.28"

# Gestion d'erreurs
thiserror = "2"

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }

[dev-dependencies]
proptest = "1"
tempfile = "3"

[profile.release]
opt-level     = "z"    # taille minimale
lto           = true
codegen-units = 1
strip         = true   # symboles strippés en release
panic         = "abort"
